# Project

./: green_github.py  Акт_осмотра_ТС.docx
library_catalog/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
library_catalog/alembic/: env.py
library_catalog/alembic/versions/: 20251224_231447_create_books_table.py  20251224_231837_create_books_table.py  20251225_100934_create_users_table.py
library_catalog/src/library_catalog/: main.py
library_catalog/src/library_catalog/api/: dependencies.py
library_catalog/src/library_catalog/api/v1/routers/: __init__.py  auth.py  books.py  health.py
library_catalog/src/library_catalog/api/v1/schemas/: __init__.py  auth.py  book.py  common.py
library_catalog/src/library_catalog/core/: cache.py  clients.py  config.py  database.py  exceptions.py  logging_config.py  rate_limit.py
library_catalog/src/library_catalog/data/: uow.py
library_catalog/src/library_catalog/data/models/: __init__.py  book.py  user.py
library_catalog/src/library_catalog/data/repositories/: __init__.py  base_repository.py  book_repository.py  user_repository.py
library_catalog/src/library_catalog/domain/: exceptions.py
library_catalog/src/library_catalog/domain/mappers/: __init__.py  book_mapper.py
library_catalog/src/library_catalog/domain/services/: __init__.py  auth_service.py  book_service.py
library_catalog/tests/: conftest.py
library_catalog/tests/integration/test_api/: test_books_api.py
