[tool.poetry]
name = "library-catalog"
version = "1.0.0"
description = "REST API для управления библиотечным каталогом"
authors = ["Developer <developer@example.com>"]
readme = "README.md"
packages = [{include = "library_catalog", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (for Depends)
    "B904",   # raise from within except (not always needed)
    "ARG001", # unused function argument (for FastAPI dependencies)
    "ARG002", # unused method argument
    "RUF001", # ambiguous unicode (cyrillic in strings) - русская документация
    "RUF002", # ambiguous unicode (cyrillic in docstrings) - русская документация
    "RUF003", # ambiguous unicode (cyrillic in comments) - русские комментарии
    "N818",   # exception name should end with Error - AppException is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"alembic/*" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["library_catalog"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
